forms and users accounts

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,5 +5,7 @@
 <h2>{{post.title}}</h2>
 <p>{{post.body}} </p>
 </div>
+<a class="d-block" href="{% url 'post_update' post.id %}">Edit</a>
+<a class="d-block" href="{% url 'post_delete' post.id %}">Delete</a>
 
 {% endblock content %}
