--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="auto">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -11,9 +11,23 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <header class="d-flex justify-content-between align-items-center">
             <h1 class="mb-4"><a href="{% url 'home' %}">Django Blog</a></h1>
+            {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="btn btn-danger">log out</a>
+            <a href="{% url 'post_new' %}">+Add new post</a>
+            {% else %}
+            <div>
+                <a href="{% url 'login' %}" class="btn btn-success">log in</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
+            </div>
+            {% endif %}
+            
+            
         </header>
+        {% if user.is_authenticated %}
+        <p>Welcome back {{user.username}}! </p>
+        {% endif %}
         {% block content %} {% endblock content %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
