--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
-{% block title %}Edit {{object.title}} {% endblock title %}
+{% block title %}New {% endblock title %}
 {% block content %}
 <form action="" method="post" class="mt-3">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Edit" class="btn btn-success">
+    <input type="submit" value="Post" class="btn btn-success">
 </form>
 {% endblock content %}
